--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -4,4 +4,34 @@
 @import "./common/fonts.scss";
 
 /* BLOCKS */
-@import "./blocks/header.scss";
+@import "./blocks/visually-hidden.scss";
+@import "./blocks/page.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/site-list.scss";
+@import "./blocks/main-container.scss";
+@import "./blocks/promo.scss";
+@import "./blocks/programs.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/stats.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/products.scss";
+@import "./blocks/features.scss";
+@import "./blocks/sub-products.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/filter.scss";
+@import "./blocks/control.scss";
+@import "./blocks/auth.scss";
+@import "./blocks/radio.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/add-info.scss";
+@import "./blocks/comments.scss";
+@import "./blocks/main-footer.scss";
+@import "./blocks/location.scss";
+@import "./blocks/map.scss";
+@import "./blocks/adress.scss";
+@import "./blocks/social.scss";
+@import "./blocks/copyright.scss";
+
+
