Добавляет базовую стилизацию проекта

--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,5 +1,5 @@
-.main-header { 
-  background-color: #663399;
-  color: #ffffff;
-  padding: 10px 15px;
+.main-header {
+  background-color: $bg-base-white;
+  color: $base-color-text;
+  padding: 20px 13px;
 }
