--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,12 @@
 /* здесь используйте глобальные переменные */
+$primary-font: "Oswald", "Arial", sans-serif;
+$secondary-font: "Lato", "Arial", sans-serif;
+
+$base-color-text: #000000;
+$primary-color-text: #444444;
+$secondary-color-text: #ffffff;
+$special-dark-grey: #222222;
+$bg-base-white: #ffffff;
+$bg-green: #68b738;
+$bg-grey:#f2f2f2;
+
