--- a/source/styles/blocks/main-container.scss
+++ b/source/styles/blocks/main-container.scss
@@ -1,7 +1,14 @@
-.main-container {
 
+.inner-container__title {
+  font-family: $primary-font;
+  font-size: 36px;
+  line-height: 36px;
+  text-align: left;
 }
 
-.inner-container {
-    
+.inner-container__description {
+  font-size: 14px;
+  line-height: 18px;
+  text-align: left;
+  text-transform: uppercase;
 }
