--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -1,7 +1,14 @@
 .page {
-
+  height: 100%;
 }
 
 .page__body {
-    
+  font-family: $primary-font;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  color: $base-color-text;
+  background-color: $bg-base-white;
+  margin: 0;
+  min-height: 100%;
 }
