--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,1 +1,28 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее */
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.picture {
+  display: block;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+.body {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+}
