--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,15 +1,17 @@
 /* GLOBAL */
 @import "./common/variables.scss";
-@import "./common/global.scss";
+@import "./common/mixins.scss";
 @import "./common/fonts.scss";
+@import "./common/global.scss";
+@import "./common/visually-hidden.scss";
+
 
 /* BLOCKS */
-@import "./blocks/visually-hidden.scss";
+@import "./blocks/button.scss";
 @import "./blocks/page.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/main-nav.scss";
-@import "./blocks/site-list.scss";
 @import "./blocks/main-container.scss";
 @import "./blocks/promo.scss";
 @import "./blocks/programs.scss";
@@ -33,5 +35,4 @@
 @import "./blocks/adress.scss";
 @import "./blocks/social.scss";
 @import "./blocks/copyright.scss";
-
 
