--- a/source/styles/blocks/products.scss
+++ b/source/styles/blocks/products.scss
@@ -5,6 +5,13 @@
   text-align: left;
 }
 
+.products__item--show-all {
+  background-image: url("/icons/stack.svg#catalog-icons_plus");
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: 30px 30px;
+}
+
 .products__name {
   font-size: 16px;
   line-height: 20px;
