--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,19 +1,39 @@
+.promo::before {
+  content: "";
+  z-index: -1;
+  background-image:
+    linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+    image-set(
+      url("/images/mobile-index/index-background-mobile@2x.webp") type("image/webp") 2x,
+      url("/images/mobile-index/index-background-mobile@1x.webp") type("image/webp") 1x,
+      url("/images/mobile-index/index-background-mobile@2x.jpg") 2x,
+      url("/images/mobile-index/index-background-mobile@1x.jpg") 1x),
+    linear-gradient(90deg,#504f54 50%,#444348 50%);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: auto;
+  width: 100%;
+  height: 302px;
+  position: absolute;
+}
+
+
+
 .promo__wrapper {
   font-family: $primary-font;
-  background: linear-gradient(to right, white 50%, $bg-green 50%);
+  color: $secondary-color-text;
+  
 }
 
 .promo__title {
   font-size: 36px;
   line-height: 36px;
-  color: $secondary-color-text;
   text-align: center;
 }
 
 .promo__slogan {
   font-size: 14px;
   line-height: 14px;
-  color: $secondary-color-text;
   text-align: center;
   text-transform: uppercase;
 }
