--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -30,7 +30,37 @@
 }
 
 .sub-products__gift {
-  background-color: $bg-green;
+  display: block;
+  position: relative;
+}
+
+.sub-products__gift::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  width: 280;
+  height: 290;
+  background-image: 
+  linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+  image-set(
+    url("/images/mobile-catalog/background-catalog-mobile@2x.webp") type("image/webp") 2x,
+    url("/images/mobile-catalog/background-catalog-mobile@1x.webp") type("image/webp") 1x,
+    url("/images/mobile-catalog/background-catalog-mobile@2x.png") 2x,
+    url("/images/mobile-catalog/background-catalog-mobile@1x.png") 1x
+  );
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.sub-products__gift::after {
+  content: "";
+  background-image: url("/icons/stack.svg#catalog-icons_gift");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 80px;
+  height: 80px;
+  position: absolute;
 }
 
 .sub-products__label {
@@ -40,4 +70,5 @@
   text-align: center;
   color: $secondary-color-text;
 }
+
 
