--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -1,3 +1,14 @@
+.features {
+  display: flex;
+  flex-direction: row;
+}
+
+.features__row {
+  display: flex;
+  justify-content: space-between;
+  gap: 63px;
+}
+
 .features__title {
   font-family: $secondary-font;
   font-size: 12px;
