--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,5 +1,49 @@
-.main-header {
+.main-header__ {
   background-color: $bg-base-white;
   color: $base-color-text;
-  padding: 20px 13px;
 }
+
+.main-header__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 13px 20px;
+  height: 264px;
+  position: relative;
+  margin: 0 auto;
+  
+  
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    padding: 25px 30px 0 30px;  
+    height: 75px;
+} 
+
+  @media (min-width: $desktop-width) {
+    height: 116px;
+    padding: 55px 110px 0 110px;
+}
+
+}
+
+.main-header__logo {
+  display: flex;
+  align-items: center;
+  gap: 56px;
+
+  @media (min-width: $tablet-width) {
+    width: 174px;
+    gap: 13px;
+} 
+  @media (min-width: $desktop-width) {
+    width: 202px;
+    gap: 14px;
+}
+
+}
+
+
+
+
+
