--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,5 +1,29 @@
-.promo::before {
+.promo {
+  font-family: $primary-font;
+  color: $secondary-color-text; 
+}
+
+.promo__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 480px;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    height: 875px;
+    padding: 65px 30px 0 120px;
+} 
+
+  @media (min-width: $desktop-width) {
+    height: 570px;
+    padding: 110px 0 0 190px;
+} 
+}
+
+.promo__wrapper::before {
   content: "";
+  display: block;
   z-index: -1;
   background-image:
     linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
@@ -17,18 +41,54 @@
   position: absolute;
 }
 
+@media (min-width: $tablet-width) {
+  .promo__wrapper::before {
+    content: "";
+    display: none;
+  }
+}
 
-
-.promo__wrapper {
-  font-family: $primary-font;
-  color: $secondary-color-text;
-  
+@media (min-width: $desktop-width) {
+  .promo__wrapper::before {
+    content: "";
+    display: block;
+    background-image:
+      linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+      image-set(
+        url("/images/desktop-index/index-background-desktop@2x.webp") type("image/webp") 2x,
+        url("/images/desktop-index/index-background-desktop@1x.webp") type("image/webp") 1x,
+        url("/images/desktop-index/index-background-desktop@2x.jpg") 2x,
+        url("/images/desktop-index/index-background-desktop@1x.jpg") 1x),
+      linear-gradient(90deg,#504f54 50%,#444348 50%);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: auto;
+    width: 50%;
+    height: 694px;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
 }
 
 .promo__title {
   font-size: 36px;
   line-height: 36px;
   text-align: center;
+  margin: 0;
+  padding: 27px 35px 25px 35px;
+
+  @media (min-width: $tablet-width) {
+    align-self: flex-start;
+    font-size: 60px;
+    line-height: 60px;
+    text-align: left;
+    color: $base-color-text;
+    padding: 0;
+    padding-bottom: 40px;
+    max-width: 420px;
+    order: 0;
+} 
 }
 
 .promo__slogan {
@@ -36,4 +96,51 @@
   line-height: 14px;
   text-align: center;
   text-transform: uppercase;
+  margin: 0;
+  padding-bottom: 29px;
+
+  @media (min-width: $tablet-width) {
+    align-self: flex-start;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: left;
+    color: $base-color-text;
+    padding-bottom: 50px;
+    order: 1;
+} 
+
+   @media (min-width: $desktop-width) {
+    padding-bottom: 52px;
+   }
+}
+
+.promo__picture {
+  display: block;
+  margin: 0 20px 0 20px;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    order: 3;
+    top: -60px;
+    left: -68px;
+}
+   @media (min-width: $desktop-width) {
+    position: absolute;
+    top: 150px;
+    left: 530px;
+}
+}
+
+.promo__button {
+  padding: 10px 64px;
+
+  @media (min-width: $tablet-width) {
+    z-index: 1;
+    order: 2;
+    align-self: flex-start;
+    text-align: center;
+    font-size: 20px;
+    line-height: 26px;
+    padding: 14px 26px;
+}
 }
