--- a/source/styles/blocks/stats.scss
+++ b/source/styles/blocks/stats.scss
@@ -1,12 +1,56 @@
-.stats__wrapper {
-  background-color: #eaeaea;
+.stats {
   font-family: $primary-font;
+  color: $base-color-text;
+  background-color: $bg-grey;
+
+  @media (min-width: $tablet-width) {
+    background: linear-gradient($bg-base-white 57%,$bg-grey 57%);
+    width: 100%;
+    height: 100%;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background: linear-gradient(#fff 59%,#f2f2f2 41%);
+    width: 100%;
+    height: 100%;
+    padding: 0 110px 85px;
+    
+  }
+}
+
+.stats__wrapper {
+  padding: 25px 20px 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 45px 30px 0 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+  }
 }
 
 .stats__title {
   font-size: 36px;
   line-height: 40px;
-  text-align: center;
+  text-align: left;
+  margin: 0;
+  margin-bottom: 40px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 146px;
+  }
 }
 
 .stats__description {
@@ -15,13 +59,83 @@
   line-height: 18px;
   text-align: left;
   color: $primary-color-text;
+  margin: 0;
+  margin-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 55px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 436px;
+    margin-bottom: 69px;
+  }
+  
 }
+
+.stats__container {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: column;
+  }
+}
+
+.stats__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0;
+  margin-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+   justify-content: left;
+   gap: 43px;
+   margin: 0 auto 0 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    gap: 42px;
+    margin-bottom: 55px;
+  }
+}
+
+.stats__item {
+  display: flex;
+  text-align: center;
+  border: 1px solid #cdcdcd;
+  border-radius: 3px;
+  justify-content: center;
+  align-items: center;
+  width: 124px;
+  height: 56px;
+  position: relative;
+  margin-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+    width: 162px;
+    height: 77px;
+  }
+}
+
 
 .stats__number {
   font-size: 24px;
   line-height: 24px;
-  text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
+  }
 }
 
 .stats__description-result {
@@ -30,16 +144,82 @@
   line-height: 12px;
   text-align: center;
   color: $primary-color-text;
+  position: absolute;
+  bottom: -15px;
+  width: 77px;
+  background-color: $bg-grey;
+
+  @media (min-width: $tablet-width) {
+    font-size: 14px;
+    line-height: 14px;
+    bottom: -4px;
+    width: 125px;
+    background-color: $bg-base-white;
+
+  }
 }
 
-.stats__results-title {
-  font-size: 14px;
-  line-height: 20px;
+.stats__results {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 327px;
+  }
 }
 
-.stats__results-indicator {
+.stats__indificator {
   font-size: 14px;
   line-height: 20px;
-  text-align: center;
+  text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px; 
+    margin-bottom: 9px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
+  }
+
+}
+
+.stats__cost {
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+  
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
+  
+}
+
+
+
+
+
+.stats__slider {
+  padding: 0 20px 40px 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 99px 74px 101px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+  }
 }
