Добавляет адаптивную разметку страниц каталога и формы

--- a/source/styles/blocks/add-info.scss
+++ b/source/styles/blocks/add-info.scss
@@ -3,4 +3,58 @@
   font-size: 24px;
   line-height: 26px;
   text-align: left;
+  margin: 23px 0px 34px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    margin: 65px 0 57px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 70px 0 57px;
+  }
+}
+
+.add-info__list {
+  display: flex;
+  flex-direction: column;
+  gap: 13px; 
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-right: 95px;
+    row-gap: 32px;
+    column-gap: 123px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+  }
+}
+
+.add-info__button {
+  margin-top: 34px;
+  padding: 10px 78px;
+
+  @media (min-width: $tablet-width)  {
+    font-size: 20px;
+    line-height: 26px;
+    margin-top: 52px;
+    padding: 14px 65px;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-top: 60px;
+    padding: 14px 208px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .add-info__item {
+    flex-grow: 1;
+  }
 }
