--- a/source/styles/blocks/products.scss
+++ b/source/styles/blocks/products.scss
@@ -7,6 +7,17 @@
   display: flex;
   flex-direction: column;
   margin-top: 27px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 56px;
+    padding: 0 22px 83px 38px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 74px;
+    padding: 0 110px 71px;
+
+  }
 }
 
 .products__title {
@@ -17,24 +28,69 @@
   margin: 0;
   padding: 0 20px 41px 20px;
 
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 83px;
+    padding: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 84px;
+  }
 }
 
 .products__list {
   display: flex;
   flex-direction: column;
   gap: 25px;
-}
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 324px);
+    gap: 60px;
+  };
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: repeat(4, 245px);
+    column-gap: 80px;
+    row-gap: 63px;
+  }
+
+  }
 
 .products__item {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   border-top: 1px solid #EBEBEB;
   padding: 20px 20px 0 20px;
+
+  @media (min-width: $tablet-width) {
+    border: 0;
+    background-image: linear-gradient(
+      $bg-base-white 16%,
+      $bg-grey 16%,
+      );
+    padding: 10px 37px 40px 37px;
+    justify-content: space-between;
+    gap: 32px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 38px 40px;
+  }
 }
 
 .products__item:last-child {
   border-bottom: 1px solid #EBEBEB;
+
+  @media (min-width: $tablet-width) {
+    border: 1px solid #EBEBEB;
+    background-color: $bg-base-white;
+    background-image: none;
+    max-height: 429px;
+    margin-top: 82px;
+  }
 }
 
 // product card //
@@ -43,18 +99,38 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-bottom: 17px;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+    margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    gap: 12px;
+  }
 }
 
 
 .product-card__link {
   align-self: center;
   justify-self: center;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 210px;
+  }
 }
 
-
+ 
 .product-card__characteristic {
   display: flex;
   flex-direction: column;
+
 }
 
 .product-card__name{
@@ -65,11 +141,37 @@
   text-transform: uppercase;
   padding-right: 64px;
   margin-bottom: 14px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    padding: 0;
+    margin-bottom: 20px;
+    max-width: 135px;
+    align-self: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 23px;
+    
+  }
 }
 
 .product-card__button {
   padding: 10px 110px;
   max-width: 280px;
+  align-self: center;
+
+  @media (min-width: $tablet-width) {
+    padding: 10px 94px;
+    max-width: 250px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 10px 53px;
+    max-width: 169px;
+  }
 }
 
 
@@ -79,14 +181,29 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 21px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    margin: 50px 40px 35px 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
+    margin-top: 40px;
+    margin-bottom: 58px;
+  }
 }
 
-.product-card--show-all {
+.product-card__all--plus {
   background-image: url("/icons/stack.svg#catalog-icons_plus");
   background-repeat: no-repeat;
   background-position: top;
   background-size: 30px 30px;
   position: relative;
+
+  @media (min-width: $tablet-width) {
+    background-size: 60px 60px;
+  }
 }
 
 .product-card__name-all {
@@ -96,6 +213,16 @@
   color: #111111;
   text-transform: uppercase;
   padding-top: 53px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 24px;
+    padding-top: 110px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 100px;
+  }
 }
 
 .product-card__desctiption-all {
@@ -106,11 +233,33 @@
   color: $primary-color-text;
   margin: 0;
   padding-top: 8px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 18px;
+    padding-top: 23px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 26px;
+  }
 }
 
 .product-card__button-all {
   padding: 10px 93px;
   max-width: 280px;
   margin-bottom: 24px;
+  align-self: center;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+    max-width: 250px;
+    padding: 10px 79px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 169px;
+    padding: 10px 38px;
+  }
 }
 
