--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -1,4 +1,5 @@
 .main-nav {
+  font-family: $primary-font;
   display: flex;
   flex-wrap: wrap;
   width: auto;
@@ -45,3 +46,8 @@
    }
 }
 
+@media (min-width: $desktop-width) {
+  .main-nav__link--inner {
+    color: $base-color-text;
+}
+}
