--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -12,7 +12,7 @@
 @import "./blocks/main-header.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/main-nav.scss";
-@import "./blocks/main-container.scss";
+@import "./blocks/form-container.scss";
 @import "./blocks/promo.scss";
 @import "./blocks/programs.scss";
 @import "./blocks/advantages.scss";
@@ -21,6 +21,7 @@
 @import "./blocks/products.scss";
 @import "./blocks/features.scss";
 @import "./blocks/sub-products.scss";
+@import "./blocks/catalog-promo.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/filter.scss";
 @import "./blocks/control.scss";
