--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -6,9 +6,8 @@
 .main-footer__wrapper {
   display: flex;
   flex-direction: column;
-  padding: 40px 20px;
-  align-items: center; 
-  row-gap: 40px;
+  padding: 40px 20px 20px;
+  align-items: center;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
@@ -21,3 +20,35 @@
   }
 }
 
+.main-footer__logo {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #D9D9D9;
+  width: 280px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    border: 0;
+    width: auto;
+  }
+
+}
+
+.main-footer__social {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #D9D9D9;
+  width: 280px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    border: 0;
+  }
+}
+
+.main-footer__copyright {
+  padding-top: 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
+}
