--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -8,6 +8,8 @@
 
 /* BLOCKS */
 @import "./blocks/button.scss";
+@import "./blocks/title-line.scss";
+@import "./blocks/hint.scss";
 @import "./blocks/page.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/logo.scss";
