--- a/source/styles/blocks/add-info.scss
+++ b/source/styles/blocks/add-info.scss
@@ -1,19 +1,46 @@
+.add-info {
+  padding: 0 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 30px;
+    position: relative;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 70px;
+  }
+}
+
+
 .add-info__title {
   font-family: $primary-font;
   font-size: 24px;
   line-height: 26px;
   text-align: left;
   margin: 23px 0px 34px;
+  position: relative;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
     margin: 65px 0 57px;
+    position: static;
   }
 
   @media (min-width: $desktop-width) {
     margin: 70px 0 57px;
   }
+}
+
+.add-info__title span {
+  position: relative;
+  background: white;
+  padding: 0 20px 0 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 40px;
+  }
+
 }
 
 .add-info__list {
@@ -36,6 +63,24 @@
   }
 }
 
+.add-info__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 21px;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    gap: 60px;
+    align-items: baseline;
+  }
+
+  @media (min-width: $desktop-width) {
+    gap: 80px;
+  }
+
+}
+
 .add-info__button {
   margin-top: 34px;
   padding: 10px 78px;
@@ -47,7 +92,7 @@
     padding: 14px 65px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     margin-top: 60px;
     padding: 14px 208px;
   }
