--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -46,6 +46,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 95px;
   }
 }
 
@@ -56,10 +57,11 @@
 
   @media (min-width: $tablet-width) {
      max-height: 280px;
+     counter-increment: step 1;
   }
 
   @media (min-width: $desktop-width) {
-    max-width: 246px;
+    min-width: 227px;
   }
 }
 
@@ -81,6 +83,20 @@
     width: 80px;
     height: 80px;
     top: 40px
+  }
+
+  .advantages__item::after {
+    content: ""counter(step)"";
+    color: $bg-grey;
+    font-family: $primary-font;
+    font-size: 280px;
+    line-height: 280px;
+    text-align: center;
+    position: absolute;
+    display: block;
+    top: 2px;
+    left: 114px;
+    z-index: -1;
   }
 }
 
