--- a/source/styles/blocks/comments.scss
+++ b/source/styles/blocks/comments.scss
@@ -1,3 +1,17 @@
+.comments {
+  padding: 0 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 30px;
+    position: relative;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 70px;
+  }
+  
+}
+
 .comments__title {
   font-family: $primary-font;
   font-size: 24px;
@@ -5,15 +19,27 @@
   text-align: left;
   margin: 0;
   margin: 24px 0 38px;
+  position: relative;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
     margin: 65px 0 87px;
+    position: static;
   }
 
   @media (min-width: $desktop-width) {
     margin: 40px 0 78px;
+  }
+}
+
+.comments__title span {
+  position: relative;
+  background: white;
+  padding: 0 20px 0 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 40px 0;
   }
 }
 
@@ -32,5 +58,6 @@
     font-size: 20px;
     line-height: 30px;
     height: 175px;
+    margin: 0 40px;
   }
 }
