--- a/source/styles/blocks/filter.scss
+++ b/source/styles/blocks/filter.scss
@@ -7,26 +7,27 @@
 
 .filter__auth {
   padding: 0;
-  padding-bottom: 23px;
   border: 0;
-  border-bottom: 1px solid #D9D9D9;
   margin: 0;
+  border-bottom: 1px solid #D9D9D9;
+  padding: 0 20px 23px;
 
   @media (min-width: $tablet-width) {
     border: 0;
-    padding-bottom: 72px;
+    padding: 0 70px 72px;
   }
 
   @media (min-width: $desktop-width) {
     display: flex;
     flex-grow: 1;
-    padding: 0;
+    padding: 0 0 0 110px ;
   }
 }
 
+
 .filter__radio {
   padding: 0;
-  padding: 23px 0 19px 0;
+  padding: 0 20px 19px;
   border: 0;
   border-bottom: 1px solid #D9D9D9;
   margin: 0;
@@ -35,12 +36,14 @@
     border-bottom: 0;
     border: 1px solid #E7E7E7;
     padding: 23px 27px 27px;
+    margin: 0 70px;
   }
 
   @media (min-width: $desktop-width) {
     display: flex;
     flex-grow: 1;
     padding: 25px 28px;
+    margin: 0 110px 0 0;
   }
 }
 
@@ -48,6 +51,10 @@
   border: 0;
   margin: 0;
   padding: 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 40px;
+  }
 
   @media (min-width: $desktop-width) {
     display: flex;
@@ -60,6 +67,10 @@
   margin: 0;
   padding: 0;
 
+  @media (min-width: $tablet-width) {
+    padding: 0 40px;
+  }
+
   @media (min-width: $desktop-width) {
     display: flex;
     flex-grow: 1;
@@ -70,14 +81,21 @@
   border: 0;
   margin: 0;
   padding: 0;
-}
 
-
-@media (min-width: $desktop-width) {
-  .filter__wrapper {
-    display: flex;
-    flex-direction: row;
-    gap: 80px;
+  @media (min-width: $tablet-width) {
+    padding: 0 30px;
   }
 }
+
+.filter__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+    gap: 80px;
+  }  
+}
+
 
