--- a/source/styles/blocks/form-container.scss
+++ b/source/styles/blocks/form-container.scss
@@ -1,12 +1,12 @@
 .form-container {
-  padding: 27px 20px 32px;
+  padding: 27px 0 32px;
 
   @media (min-width: $tablet-width) {
-    padding: 65px 70px 60px;
+    padding: 65px 0 60px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 74px 110px 79px;
+    padding: 74px 0 79px;
   }
 }
 
@@ -15,6 +15,7 @@
   font-size: 36px;
   line-height: 36px;
   text-align: left;
+  padding: 0 20px;
   margin: 0;
   margin-bottom: 37px;
 
@@ -22,10 +23,12 @@
     font-size: 60px;
     line-height: 60px;
     margin-bottom: 54px;
+    padding: 0 70px;
   }
 
   @media (min-width: $desktop-width) {
     margin-bottom: 55px;
+    padding: 0 110px;
   }
 }
 
@@ -36,10 +39,16 @@
   text-transform: uppercase;
   margin: 0;
   margin-bottom: 39px;
+  padding: 0 20px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 66px;
+    padding: 0 70px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 110px;
   }
 }
