--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -3,20 +3,48 @@
   display: flex;
   flex-wrap: wrap;
   width: auto;
+  position: relative;
+  min-height: 66px;
+  background-color: $bg-base-white;
 }
 
 
 @media (min-width: $tablet-width) {
-  .main-nav__toggle {
-    display: none;
-  }
+  .main-nav__item--current {
+   border-bottom: 2px solid $bg-green;
+}
 }
 
-@media (min-width: $desktop-width) {
-  .main-nav__toggle {
+
+.main-nav__toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  z-index: 2;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  border: 0;
+  background-color: $bg-base-white;
+ 
+  @media (min-width: $tablet-width) {
     display: none;
-  }
 }
+}
+
+
+.main-nav__close::before {
+  content: "";
+  position: absolute;
+  top: 23px;
+  right: 20px;
+  width: 18px;
+  height: 18px;
+  background-image: url("/icons/stack.svg#header_burger");
+  background-color: $bg-base-white;
+}
+
 
 
 .main-nav__list {
