--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -17,6 +17,7 @@
     flex-direction: column;
     margin: 0;
     padding: 0 30px 70px;
+    position: relative;
   }
 
   @media (min-width: $desktop-width) {
@@ -32,12 +33,15 @@
   text-align: left;
   margin: 0;
   margin-bottom: 36px;
+  position: relative;
+  width: auto;
+
 
   @media (min-width: $tablet-width) {
-    margin-left: 40px;
     margin-bottom: 80px;
     font-size: 32px;
     line-height: 32px;
+    position: static;
   }
 
   @media (min-width: $desktop-width) {
@@ -47,6 +51,17 @@
     margin-bottom: 80px;
   }
 }
+
+.sub-products__title span {
+  position: relative;
+  background: white;
+  padding: 0 40px 0 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 40px;
+  }
+}
+
 
 .sub-products__list {
   display: flex;
