--- a/source/styles/blocks/subscription.scss
+++ b/source/styles/blocks/subscription.scss
@@ -10,6 +10,7 @@
 
   @media (min-width: $tablet-width) {
     padding: 0 30px 80px;
+    position: relative;
   }
 
   @media (min-width: $desktop-width) {
@@ -25,12 +26,13 @@
   text-align: left;
   margin: 0;
   margin-bottom: 32px;
+  position: relative;
 
   @media (min-width: $tablet-width) {
     font-size: 32px;
     line-height: 32px;
-    padding-left: 40px;
     margin-bottom: 66px;
+    position: static;
   }
 
   @media (min-width: $desktop-width) {
@@ -38,6 +40,16 @@
     line-height: 40px;
     padding-left: 70px;
     margin-bottom: 72px;
+  }
+}
+
+.subscription__title span {
+  position: relative;
+  background: white;
+  padding: 0 40px 0 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 40px;
   }
 }
 
